--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bomreader",
   "version": "1.0.0",
   "description": "B_M_Site reader",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "mesotokyo",
   "license": "ISC",
